--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Image Server</title>
 </head>
 <body>
-    <form action="/" method="POST" enctype="multipart/form-data">
+    <form action="/yes-tpu/return" method="POST" enctype="multipart/form-data">
         <input type="file" name="myFiles" multiple />
         <button type="submit">Upload</button>
     </form>
